<?php
include_once 'Clam.php';

/**
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/17
 * Time: 20:17
 */
class FreshClams implements Clam {

}