<?php
include_once 'Veggies.php';

/**
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/17
 * Time: 20:14
 */
class Garlic implements Veggies {

}