<?php
include_once 'Sauce.php';

/**
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/17
 * Time: 20:11
 */
class MarinaraSauce implements Sauce {

}