<?php
include_once 'Cheese.php';

/**
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/17
 * Time: 20:12
 */
class ReggianoCheese implements Cheese {

}