<?php
include_once 'Pepperoni.php';

/**
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/17
 * Time: 20:16
 */
class SlicedPepperoni implements Pepperoni {

}