<?php
include_once 'Dough.php';

/**
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/17
 * Time: 20:10
 */
class ThinCrustDough implements Dough {

}